<resources>
    <string name="showMore">Show More</string>
    <string name="hide">hide</string>
    <string name="err_name">Please Enter valid User Name</string>
    <string name="err_place">Please Enter Correct Place</string>
    <string name="error_network">Network Error</string>
    <string name="main_app_name">Ayya Vaikunda Swamy</string>
    <string name="app_name">AVS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="vazhipattumurai">வழிபாட்டு முறை</string>
    <string name="ayyavazhi">அய்யா வழி</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="moberror">Enter Valid MobileNo</string>
    <string name="spinneranswer">Select Your Question</string>
    <string name="kannihistorydesc">சப்தகன்னியர் எனப்படுவோர் பிராம்மி, மகேஸ்வரி, கௌமாரி, வைஷ்ணவி, வராகி, இந்திராணி, சாமுண்டீஸ்வரி ஆவர். உலகை இயக்கும் ஐந்தொழில்கள் புரிந்து வரும் சிவசக்தி எடுத்த திருமேனிகளே, சப்த கன்னியர் என்றும் சப்த மாதாக்கள் என்றும் சப்த மாத்திரிகைக்கள் என்றும் அழைக்கப்படுகின்றனர்.  பத்மமாதாக்கள் எனவும் சப்த கன்னியர்கள் அறியப்படுகிறார்கள்.  சிவபெருமான் அந்தகாசுரன் எனும் அரக்கனுடன் போர் புரிந்தார். அப்பொழுது அந்காசுரனின் உடலில் இருந்து வெளிபடுகின்ற இரத்தத்திலிருந்து அசுரர்கள் தோன்றினார்கள். அவர்களை அழிக்கும் பொருட்டு சிவபெருமான் தன் வாய் அக்கினியிலிருந்து யோகேசுவரி என்ற சக்தியை தோற்றுவித்தார். யோகேசுவரி மகேசுவரி என்ற சக்தியை உருவாக்கினார். மகேசுவரிக்கு துணையாக பிரம்மா பிராம்மியை தோன்றுவித்தார். திருமால் நாராயிணியை தோற்றுவித்தார். இந்திரன் இந்திராயையும், முருகன் கௌமாரியையும், வராக மூர்த்தி வராகியையும், யமன் சாமுண்டியையும் தோன்றுவித்தனர்.  சும்ப - நிசும்ப என்ற அரக்கர்களை அம்பிகை அழிக்கப்போர் புரிந்த போது அவளுக்கு உதவியாக இத்தேவியர்கள் உற்பவித்தனர் என்று மார்க்கண்டேய புராணம் கூறுகின்றது. காளிதாசனின் குமார சம்பவம் என்ற காவியத்தில் சப்த கன்னியர் சிவபெருமானின் பணிப்பெண்டிர் என்ற குறிப்புக் காணப்படுகின்றது  இவ்வாறு சப்தகனியர் சிவனுக்கு பணவிடை செய்யும் போது நாராயணர் ஆண்டி பண்டாரம் வேஷம் கொண்டு சிவனுக்கு பணி செய்யும் தாங்கள் இன்று ஒரு நாள் எனக்கு பணி செய்யுங்கள் என கேட்டார், கன்னியர்கள் பரம்பொருளுக்கு பணி செய்யும் நாங்கள் உன் போல் ஆண்டி பண்டாரத்திற்கு ஒருபோதும் பணி செய்ய மாட்டோம் என கூறி நீராட சென்றனர் நீராடிய கன்னியர்களுக்கு நாராயணர் கடும் குளிர் உண்டுசெய்தார் குளிர் தாங்க முடியாமல் கன்னியர்கள் கரையேரும் சமயம் நாராயணர் அக்னியாக தொன்றினார் குளிர் தாங்காத கன்னியர் குளிர் காய்வதர்க்கு அக்னியை சுற்றி நின்று அணைத்தார்கள் நாராயணர் தன் ரூபத்தை கன்னியர்களுக்கு காட்சி அளித்தார் இழிவாக பேசியதுனால் கன்னியர் கற்பிழந்து போக சாபமிட்டார் ஏழு குழந்தைகளை பெற்றனர்.அவர்களே தெய்வகுல சான்றோர்கள் ஆவர்.இவ்வாறு பிள்ளைகளை ஈன்ற கன்னியர்கள் கற்பிழந்த காரணத்தால் கயிலையை மறந்து வனத்தில் தவமிருக்க சென்றனர்.   அப்போது அய்யா நாராயணர் அன்பாக்ச் செப்புகிறார் கன்னியர்களுக்குச் சிறந்த தருணமது ஆயிரத்தெட்டு அம்பலமும் ஆன திருப்பதியில் வாயிதம் ஓர் அம்பலமும் வளர்பதியில் ஒன்றதுவும் கெங்கையு கண்ணும் கேள்வி மன்னர்தம் சாவும் சங்கை அழிந்து தலையழிந்த அவ்வாண்டு வருவேன் தென்சுவர்க்க வடமேற்கு மூலையில் லிங்கம் ஒன்றில் மூன்று இணையாக உதித்ததென எங்கும் பிரகாசமிட்டு அவ்வாண்டே வருவோம் கண்டிருங்கள் நீங்கள் நான்வரும் தருணம் அநேகம் உண்டு விண்டுரைக்கக் கூடாது மெல்லியரே இத்தருணம் சொன்ன தருணம் செவி கேட்டு நீங்கள் எல்லாம் என்னை நினைத்து இருங்கோ ஒரு நினைவாய் இத்தருணம் கேட்ட இப்பொழுது முதலாய் வடமேற்கும் மேற்கும் வடக்கும் கால் நீட்டாதுங்கொ என்று தருணம் இது உரைத்தார் கன்னிகளுக்கு, அன்று மடவார் அகம்மகிழ்ந்து கொண்டாடி நல்லதுகாண் எங்களையும் நாயகமே நீர் படையும் வல்ல பெருமானே மறைமுதலே என்றுரைத்தார் , உடன் அய்யா நாதன் ஓவியத்தோர் ஏழுபேரையும் திடமான பூமியிலே செய்தர்ம அவ்வழியில் பிறவி செய்தார். பிறந்த அவர்களை அய்யா வைகுண்டராக வந்த பிறகு ஏழு கன்னியர்களையும் திருமணம் செய்துக்கொண்டார்.</string>
    <string name="kaliHistory">காளியின் வரலாறு</string>
    <string name="kaliHistoryContent">
        தாருகன் என்று ஓர் அரக்கன் இருந்தான். அவன் சிறந்த சிவ பக்தன், சிவபெருமானை நோக்கி கடுமையான தவமிருந்தான், அவனது தவத்திற்கு இரங்கிய சிவபெருமான், அவன் முன்பாக தோன்றி உனக்கு என்ன வரம் வேண்டும் எனக் கேட்டார்.   தனக்கு ஒரு வரம் வேண்டும் என்றும், இளம் பெண்ணைத் தவிர வேறு யாராலும் தனக்கு மரணம் ஏற்படக்கூடாது என்றும் கேட்டான் தாருகன், சிவபெருமானும் அவன் விருப்பப்படியே வரத்தைக் கொடுத்து அருளாசி வழங்கி மறைந்தார், வரம் பெற்ற தாருகனிடம் அநியாயம் தலைதூக்கியது, அவனது ஆட்டம் அதிகமானது.   அசுரனான அவன் தேவர்களுக்கு அளவில்லா துயரத்தைக் கொடுக்கத் தொடங்கினான், அவனைக் கண்டு அஞ்சிய தேவர்கள் சிவபெருமானிடம் ஓடிச் சென்று முறையிட்டனர், சற்றே யோசித்த சிவபெருமான், தன் வலது கரத்தால் தன் கண்டத்தில் இருக்கும் விஷத்தைத் தடவினார்.   அடுத்த நொடி அங்கு ஒரு அழகிய பெண் தோன்றினாள். அற்புத அழகுடனும், தீட்சண்யமான பார்வையுடனும் அவதரித்த அந்தப் பெண்ணே காளிதேவி ஆவாள். கண்டத்திலிருந்து உருவான காளிதேவி, சிவபெருமானை வணங்கி நின்றாள்.   ‘நான் என்ன செய்ய வேண்டும்?’ என்று சிவபெருமானிடம் கேட்டாள் காளிதேவி. ‘தாருகன் என்ற அசுரனை அழித்து வா’ எனக் கட்டளையிட்டார் சிவபெருமான். காளிதேவி ஒரு பெரிய படையை உருவாக்கி தாருகனுடன் போரிட்டு அவனை வதம் செய்து அழித்தாள்.   சிவனால் தோற்றுவிக்கப்பட்ட காளிதேவி பல பெயர்களில் அழைக்கப்படுகிறாள். வரதான சொரூபிணி, நிகம்ப சூதனி, யோகப்பிடாரி, தாண்டவக் காளி, சுகாசனக் காளி எனப் பல பெயர்கள் காளிதேவிக்கு உண்டு. பக்தர்களை இன்முகத்துடன் பத்திரமாகக் காப்பதால் பத்ரகாளி என்றும் அழைக்கப்படுகிறாள்.  தக்கனை வதம் செய்வதற்க்கு முன்பாகவே காளி சிவபெருமானிடன் கேட்டிருப்பாள், என்னோடு உதவிச்செய்ய படையாய் தான்வர வன்ன புதல்வர்கள் எனக்கு வேண்டும் என்று, அப்போது சிவபெருமான் சொல்லுவார் கற்ப்போடு ஒத்த கன்னியே உனக்கு தரித்துப் பிறக்க ஆகாதே மாகாளி, மரித்துப் பிறக்காத மாகாளியே உனக்கு ஒன்று நான் சொல்கிறேன் கேள்.  படைக்காக பாலர் பச்சைமால் தா என்று தவசு மிகப்புரிந்தால் சங்கு சரத்தாமன் விவசுதனில் பிறந்த வீரர் ஏழுபேர்களையும் உன்னை அழைத்து உன் கையில் தருவார், அதனால் நீ இப்போதே தவசு இருக்க போ என்று சிவபெருமான் விடையும் அருளி மிகக்கொடுத்தார்.  பரமானதேவி பச்சைமால் தனைத்தான் நினைத்து தவசு நெடுநாலாய் நின்றாள், அதன் பிறகுதான் கன்னிமார்கள் பெற்றெடுத்த ஏழு குழந்தைகளையும் காளியை வரவழைத்து கொடுத்தார், அந்த ஏழு குழந்தைகளையும் நாராயணர் எங்கே வைத்து கொடுத்தார் தெரியுமா கயிலாச மலையில் வைத்து, அங்கே வைத்து கொடுக்கும்போது அப்போது அங்கே சிவபெருமான், மற்றும் தேவாதி தேவர்கள் எல்லோரும் கூடி இருக்கும் சபையில் வைத்து, நாராயணர் சொல்லுவார் காளியே நீ என் குழந்தைகளை நல்லபடியாக வளர்க்க வேண்டும் என்று, அப்போது காளி சொல்லுவாள், என் கையதுக்குள்ளே வளரும் குழைந்தைகளை என்னையும் வெல்ல இந்த பூமியில் யாரும் உண்டோ என்று, அப்படி காளி சொன்ன உடனே நாராயனர் சொல்லுவார், காளியே என் ஏழு குழந்தையில் ஒன்று குறைந்தாலும் உன்னை வன்னிமா மண்டபத்தில் சிறை வைப்பேன் என்றுச் சொல்லி அந்த ஏழு குழந்தைகளையும் காளியிடம் கொடுத்தார்.  அந்த குழந்தைகளை நன்றாக வளர்த்த காளி, ஒரு சமயம் சோழன் நாடில் வைகை நதி உடைந்து வெள்ளம் பெருக்கெடுத்து ஓடியது, யார்யாரெல்லாம் வந்து அணையை அனைத்தும் பார்க்கிறார்கள் அணையை அடைக்க முடியவில்லை, சோழமன்னனிடம் காவலாளி ஒருவன் சொல்லுவான், பத்திரமாகாளியின் கையதுக்குள் வளர்ந்த தெய்வக்குல சான்றோர்கள் அவர்கள் வந்து ஒருகுட்டை மண்ணெடுத்துப் போட்டாலே அணை அடைந்துவிடும் என்று, உடனே மன்னன் அவர்களை அழைத்து வரச்சொல்லுவான் அவர்களும் வந்தார்கள், வந்தவர்களிடம் மன்னன் சொல்லுவார் இந்த அணையை அடைக்க நீங்கள் ஒருகுட்டை மண்டெடுத்துப் போட்டால் அணை அடைந்துவிடும் அதனால் நீங்கள் ஒருகுட்டை மண்ணெடுத்துப் போடுங்கள் என்றார், அதற்க்கு அவர்கள் சொல்லுவார்கள் நாங்கள் வேறு எந்த வேலையாக இருந்தாலும் செய்கிறோம் ஆனால் இந்த குட்டையில் மண் எடுக்க மாட்டோம் என்று, அதனைக் கேட்ட மன்னன் கடும் கோபம் கொண்டு தனது காவலாளிக்கு கட்டலை பிறப்பிப்பான், குட்டையில் மண் எடுக்காத இவணை கழுத்தலவு ஆள குழித்தோண்டி அதனுல் இவணை நிருத்தி யாணையின் கால் கொண்டு இவன் தலையை அடித்து எடுங்கள் என்று, மன்னன் சொன்னதுபோல் காவலாளிகலும் அப்படியேச் செய்தார்கள், அப்போது அந்த யாணையின் காலால் துண்டிக்கப்பட்ட தலை தரையில் உருண்டு போகும் போது சொல்கிறது குட்டைத்தொடோம் கூடைத்தொடோம் என்று சொல்லிக்கொண்டு போகிறது, இது ஏழுபேரின் மூத்தவன்.   அதன்பிறகு  இரண்டாவது உள்ளவனை அழைத்து கேட்பார்கள் அவரும் அதேதான் சொல்லுவார், அப்படி என்றால் இவனையும் அதைபோலவே செய்யுங்கள் என்று மன்னன் கட்டளையிட்டார், காவலாளிகளும் அப்படியே செய்தார்கள், அந்த தலையும் சொல்லிக் கொண்டே போனது, அத்தலைக்கு இத்தலை பொய்தலையில்லை குட்டைத்தொடோம் கூடைத்தொடோம் என்று, அதன்பிறகுதான் மன்னன் சிந்திக்க ஆரம்பித்தான் உயிரோடு இருக்கும் மனிதன்கூட சரியா பேசுவதில்லை ஆனால் இவர்களது தலையோ துண்டித்த பிறகும் பேசிக்கொண்டே போகிறது என்ன ஆச்சரியம் என்றார்.  இந்த ஏழு குழந்தைகளின் இரண்டு குழந்தைகளை சோழன் கொன்றது நாராயணர்க்கு தெரியும், இருந்தாலும் காளி சொன்னது எப்போது தெரியுமா பன்னிரண்டு ஆண்டுகள் கழித்து, அப்போது ஆதி அய்யா நாராயணரும் செப்போடு ஒத்த சிவனோடு சொல்லுவார், கேட்கலையோ என்றன் கிருபை சிவனாரே ஏற்கலையோ இந்த ஏந்திழையாள் சொன்னதுதான், பிள்ளைகளுக்கு ஒருதீங்கும் வராமல் எப்போதும் வள்ளல்களை நன்றாய் வளர்ப்பேன் நான் என்று சொல்லி மருட்டி விழித்து வாங்கினாள் மக்களையும், திருட்டு மொழிபேசும் செய்தியை நீர் கண்டீரோ நான் தனிமை அல்லவே நாலுபேரும் உண்டல்லவோ தான் தனிமை ஆகிடினும் தப்பிதம் என்றே புகல்வார், வானவரும் தானவரும் மறையவரும் சாட்சியதாய் நான் அவளோடே வாக்கு நவின்றல்லோ தான் கொடுத்தேன், மக்களுக்கு ஒரு தீங்கு வந்த்தே உண்டானால் மிக்க சிறை உனக்கு மேவும் என உறைத்து தான் கொடுத்தேன் மதலை இவள் கையிலே.  ஏழு மதலையில் இரண்டுபேர் இறந்துபோனாலும் வந்து சொல்லவில்லையே, சற்றும் பதறாமல் தான் இருந்து இத்தனைநாள் சொல்லவில்லை இப்போது வந்திருக்கின்றால், என் மதலைக்கு இவள்தான் இடறி விழுவாளோ ஒருவர் பிள்ளைக்கு ஒருவர் உடமை இடுவாரோ கருதல் விருப்பம் காணும் மற்றோர்க்கு , பெற்ற கும்பியல்லோ பெருங்கனல் போல் மீறுவது மற்றோர் கும்பி வருத்தி குமறிடுமோ, பாவி அவன் கொன்று பன்னிரண்டு ஆண்டுவரை யாரும் வந்து சொல்லலையே தாய் தகப்பன் இல்லார் போல் தயங்கியது கண்டோமோ சேய்பரனுக்கு ஏற்காத செய்த பழவினையோ என்று ஆதிநாதன் ஏந்திழையைத் தான்பார்த்து சென்று ஆதிவேந்தர் செடத்தோடு உயிர் திருப்பி எழுந்திருக்கும் மட்டும் இரு நீ சிறைதனிலே என்று கூறினார், அதனைக்கேட்டு மாகாளி திட்டு வடவா முகத்தில் செய்ய வன்னி மண்டபத்தில் இருந்தால் சிறையில் ஈசன் செயல் என.
    </string>
    <string name="temples">பதிகள்</string>
    <string name="ayya_flip1">அய்யா சிவசிவ சிவசிவா அரகரா அரகரா</string>
    <string name="ayya_flip2">நன்றி மறவாதே நான் பெரிதென்று எண்ணாதே</string>
    <string name="ayya_flip3">பத்திரமாய் இருந்து பணிவிடைகள் செய்திடுங்கோ</string>
    <string name="ayya_flip4">ஆணும் பெண்ணுங்கூடி ஆசாரம் செய்திடுங்கோ</string>
    <string name="ayya_flip5">ஐந்து பூ கொண்டு ஆசாரம் செய்திடுங்கள் மக்கா</string>
</resources>