<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ViewFlipper
        android:id="@+id/view_flipperText"
        android:layout_width="fill_parent"
        android:layout_marginTop="130dp"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <TextView
                style="@style/ImageTitle"
                android:textSize="12sp"
                android:text="@string/ayya_flip1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <TextView
                style="@style/ImageTitle"
                android:textSize="12sp"
                android:text="@string/ayya_flip2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/ImageTitle"
                android:textSize="12sp"
                android:text="@string/ayya_flip3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/ImageTitle"
                android:textSize="12sp"
                android:text="@string/ayya_flip4" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                style="@style/ImageTitle"
                android:textSize="12sp"
                android:text="@string/ayya_flip5" />
        </RelativeLayout>


    </ViewFlipper>



</LinearLayout>