<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_doubts_manual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avs.meyyunarvom.DoubtsManual">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/content_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:clickable="true"
        android:drawableRight="@drawable/ic_action_expand"
        android:onClick="toggle_contents"
        android:padding="10dp"
        android:text="@string/kaliHistory"
        android:textColor="@android:color/white" />

    <!--content to hide/show -->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:padding="10dp"
        android:text="@string/kaliHistoryContent"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/content1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:clickable="true"

        android:onClick="toggle_contents"
        android:padding="10dp"
        android:text="@string/temples"
        android:textColor="@android:color/white" />

    <!--content to hide/show -->
    <TextView
        android:id="@+id/title1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/holo_blue_dark"
        android:padding="10dp"
        android:text="@string/kaliHistoryContent"
        android:textColor="@android:color/white" />




</LinearLayout>
</ScrollView>
